# ini-parser

./: CMakeLists.txt  ini.cpp  ini.h  readme.md  test.ini  test2.ini
old/: configuration.h  copy.h  main.cpp  parseUtils.h  typeParsers.h
src/: configuration.h  cparse.h  ini.h  main.cpp  old-config.h  quick-types.h  settings.cpp  settings.h  type-parsers.h  util.h
